@@ -2,7 +2,12 @@ from pyjamas.ui.RootPanel import RootPanel
 from pyjamas.ui.Button import Button
 from pyjamas import Window
 
-def greet(sender):
+
+data = []
+data.append("...")
+
+def greet(fred):
+    fred = 5
     Window.alert("Hello, AJAX!")
 
 if __name__ == '__main__':
